Betterp Dashboard/Project Form

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="title_activity_dashboard_user">DashboardUser</string>
     <string name="title_activity_dashboard_leader">DashboardLeader</string>
     <string name="title_activity_chat_screen">ChatScreen</string>
+    <string name="title_activity_dashboard_leader_second">DashboardLeaderSecond</string>
 </resources>
